--- a/index.qmd
+++ b/index.qmd
@@ -3,4 +3,13 @@ title: "Home Page"
 about:
   template: marquee
   image: images/HIDRMCSHANE.jpg
+  links:
+    - icon: buildings
+      text: UChicago Page
+      href: https://stat.uchicago.edu/people/profile/aaron-t-ludkowski/
+    - icon: linkedin
+      text: LinkedIn
+      href: https://www.linkedin.com/in/aaronludkow/
 ---
+
+My name is Aaron Ludkowski. I am an aspiring data science/ statistics professional currently looking for a role in the Chicagoland area. I will graduate from the University of Chicago with an MS in Statistics in December of 2024.
